--- a/webpack/src/scss/main.scss
+++ b/webpack/src/scss/main.scss
@@ -1,12 +1,21 @@
 h1 {
   color: red;
+  @media screen and (min-width: 768px) {
+    color: blue;
+  }
 }
 
 h2 {
   color: red;
+  @media screen and (min-width: 768px) {
+    color: blue;
+  }
 }
 h3 {
   color: red;
+  @media screen and (min-width: 768px) {
+    color: blue;
+  }
 }
 .section {
   .p {
